# gede

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  build.py  create_deb_files.py  makefile  todo.rst  vcpkg.json
debian/: control  copyright  rules
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  adatagscanner.cpp  adatagscanner.h  autosignalblocker.h  autovarctl.cpp  autovarctl.h  codeview.cpp  codeview.h  codeviewtab.cpp  codeviewtab.h  codeviewtab.ui  colorbutton.cpp  colorbutton.h  com.cpp  com.h  config.h  consolewidget.cpp  consolewidget.h  core.cpp  core.h  execombobox.cpp  execombobox.h  gd.cpp  gd.pro  gdbmiparser.cpp  gdbmiparser.h  gotodialog.cpp  gotodialog.h  gotodialog.ui  ini.cpp  ini.h  locator.cpp  locator.h  log.cpp  log.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+53 more)
testapp/: makefile
testapps/ada/: makefile  test.adb
testapps/ansicolor/: makefile  start_gede.sh  test.c
testapps/basic/: makefile  start_gede.sh  test.bas
testapps/c_code/: makefile  other.c  start_gede.sh  test.c
testapps/coredump/: makefile  run_and_crash.sh  start_gede.sh  test.c
testapps/fortran/: makefile  test.f95
testapps/golang/: makefile  start_gede.sh  test.go
testapps/rust/: makefile  test.rs
testapps/stdlib_cxx/: makefile  otherclass.cpp  otherclass.h  test.cpp
testapps/threads/: makefile  test.c
testapps/tutorial_c/: func.c  func.h  main.c  makefile
tests/highlightertest/: hltest.cpp  hltest.pro
tests/ini/: test_ini.cpp  test_ini.pro
tests/tagtest/: tagtest.cpp  tagtest.pro
